--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
     </main>
     <footer>
-        <p>Creado por [Tu Nombre] - 2023</p>
+        <p>Creado por Alberto Díaz Antuña - 2025</p>
     </footer>
 </body>
 </html>
