--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="https://via.placeholder.com/40" alt="Logo de Mydz">
+            <img src="assets/Mydz_logo.png" alt="Logo de Mydz">
             <span>Mydz</span>
         </div>
         <p>Innovación en Inteligencia Artificial</p>
@@ -79,7 +79,7 @@
         <section class="chatbot-container">
             <h2>Prueba de Chatbot</h2>
             <p>Aquí puedes integrar y probar tu chatbot.</p>
-            <img src="https://via.placeholder.com/600x400?text=Robot+IA" alt="Robot gestionado por IA">
+            <img src="assets/imagen_index.png" alt="Imagen principal de la web">
         </section>
     </main>
     <footer>
