--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
             font-size: 1.5rem;
             font-weight: bold;
         }
+        .links-section {
+            margin: 2rem auto;
+            padding: 1rem;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+            max-width: 600px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .links-section a {
+            display: block;
+            margin: 0.5rem 0;
+            color: #FF6F00;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .links-section a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -80,6 +98,10 @@
             <h2>Chatbot Demos</h2>
             <p>Puedes probar tu chatbot.</p>
             <img src="assets/imagen_index.png" alt="Imagen principal de la web">
+        </section>
+        <section class="links-section">
+            <h2>Enlaces</h2>
+            <a href="asistente-gimnasio.html">Asistente de Gimnasio</a>
         </section>
     </main>
     <footer>
