--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         .chatbot-container img {
-            max-width: 100%;
+            width: 100%; /* Ajusta el ancho al 100% del contenedor */
+            height: auto; /* Mantiene las proporciones de la imagen */
             border-radius: 8px;
         }
         .logo {
