página de conocimiento

--- a/asistente-gimnasio.html
+++ b/asistente-gimnasio.html
@@ -95,8 +95,8 @@
     <main>
         <section class="chatbot-container">
             <h2>Asistente de Gimnasio</h2>
-            <p>Interactúa con el asistente para obtener recomendaciones personalizadas de entrenamiento.</p>
-            <img src="assets/imagen_index.png" alt="Imagen del asistente de gimnasio">
+            <p>Interactúa con el asistente para obtener información sobre el gimansio o como poder apntarte a las actividades.</p>
+            <img src="assets/imagen_gimnasio.png" alt="Imagen del asistente de gimnasio">
         </section>
     </main>
     <footer>
