--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <section class="links-section">
             <h2>Enlaces</h2>
             <a href="asistente-gimnasio.html">Asistente de Gimnasio</a>
+            <a href="conocimiento.html">Conocimiento</a>
         </section>
     </main>
     <footer>
