--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <h2>Enlaces</h2>
             <a href="asistente-gimnasio.html">Asistente de Gimnasio</a>
             <a href="conocimiento.html">Conocimiento</a>
+            <a href="base-conocimiento.html">Base de Conocimiento</a>
         </section>
     </main>
     <footer>
