página de bienvenida

--- a/base-conocimiento.html
+++ b/base-conocimiento.html
@@ -105,9 +105,9 @@
             <h2>Base de Conocimiento</h2>
             <ul>
                 <li>
-                    <span class="toggle">Inteligencia Artificial</span>
+                    <span class="toggle">Comenzamos</span>
                     <ul>
-                        <li><a href="ia-introduccion.html" target="content-frame">Introducción a la IA</a></li>
+                        <li><a href="docs/bienvenida.html" target="content-frame">Bienvenida</a></li>
                         <li><a href="ia-aplicaciones.html" target="content-frame">Aplicaciones de la IA</a></li>
                         <li><a href="ia-etica.html" target="content-frame">Ética en la IA</a></li>
                     </ul>
