cambios en los estilos a fichero único

--- a/asistente-gimnasio.html
+++ b/asistente-gimnasio.html
@@ -5,81 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página del asistente de gimnasio con integración de chatbot.">
     <title>Asistente Gimnasio - Mydz</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #fff;
-            color: #333;
-        }
-        header {
-            background-color: #FF6F00;
-            color: white;
-            padding: 1rem;
-            text-align: center;
-            position: relative;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2rem;
-        }
-        header p {
-            margin: 0.5rem 0 0;
-        }
-        .breadcrumbs {
-            position: absolute;
-            top: 1rem;
-            left: 1rem;
-            font-size: 0.9rem;
-        }
-        .breadcrumbs a {
-            color: white;
-            text-decoration: none;
-        }
-        .breadcrumbs a:hover {
-            text-decoration: underline;
-        }
-        main {
-            padding: 2rem;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        .chatbot-container {
-            margin: 2rem auto;
-            padding: 1rem;
-            border-radius: 8px;
-            background-color: #fff;
-            max-width: 600px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .chatbot-container img {
-            max-width: 100%;
-            border-radius: 8px;
-        }
-        .logo {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
-        .logo img {
-            width: 40px;
-            height: 40px;
-        }
-        .logo span {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
@@ -95,7 +21,7 @@
     <main>
         <section class="chatbot-container">
             <h2>Asistente de Gimnasio</h2>
-            <p>Interactúa con el asistente para obtener información sobre el gimansio o como poder apntarte a las actividades.</p>
+            <p>Interactúa con el asistente para obtener información sobre el gimnasio o cómo apuntarte a las actividades.</p>
             <img src="assets/imagen_gimnasio.png" alt="Imagen del asistente de gimnasio">
         </section>
     </main>
