--- a/recursos.html
+++ b/recursos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Base de conocimiento con navegación y contenido dinámico.">
-    <title>Base de Conocimiento - Mydz</title>
+    <meta name="description" content="Recursos con navegación y contenido dinámico.">
+    <title>Recursos - Mydz</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -13,14 +13,14 @@
             <img src="assets/Mydz_logo.png" alt="Logo de Mydz" style="width: 40px; height: 40px; vertical-align: middle;">
             <span style="font-size: 1.5rem; font-weight: bold;">Mydz</span>
         </div>
-        <p>Base de Conocimiento</p>
+        <p>Recursos</p>
     </header>
     <div class="main-container">
         <div class="sidebar">
-            <h2>Base de Conocimiento</h2>
+            <h2>Recursos</h2>
             <ul>
                 <li>
-                    <span class="toggle">Comenzamos</span>
+                    <span class="toggle">Documentación</span>
                     <ul>
                         <li><a href="docs/bienvenida.html" target="content-frame">Bienvenida</a></li>
                         <li><a href="ia-aplicaciones.html" target="content-frame">Aplicaciones de la IA</a></li>
