--- a/index.html
+++ b/index.html
@@ -5,120 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página personal para pruebas de chatbots y elementos relacionados con IA.">
     <title>Mydz - Innovación en IA</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #fff;
-            color: #333;
-        }
-        header {
-            background-color: #FF6F00;
-            color: white;
-            padding: 1rem;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2rem;
-        }
-        header p {
-            margin: 0.5rem 0 0;
-        }
-        main {
-            padding: 2rem;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        .chatbot-container {
-            margin: 2rem auto;
-            padding: 1rem;
-            border-radius: 8px;
-            background-color: #fff;
-            max-width: 600px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .chatbot-container img {
-            width: 100%; /* Ajusta el ancho al 100% del contenedor */
-            height: auto; /* Mantiene las proporciones de la imagen */
-            border-radius: 8px;
-        }
-        .logo {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
-        .logo img {
-            width: 40px;
-            height: 40px;
-        }
-        .logo span {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        .links-section {
-            margin: 2rem auto;
-            padding: 1rem;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-            max-width: 600px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .links-section a {
-            display: block;
-            margin: 0.5rem 0;
-            color: #FF6F00;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .links-section a:hover {
-            text-decoration: underline;
-        }
-        .carousel {
-            margin: 2rem auto;
-            max-width: 600px;
-            position: relative;
-            overflow: hidden;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .carousel img {
-            width: 100%;
-            display: none;
-        }
-        .carousel img.active {
-            display: block;
-        }
-        .carousel-controls {
-            position: absolute;
-            top: 50%;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            transform: translateY(-50%);
-        }
-        .carousel-controls button {
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            border: none;
-            padding: 0.5rem 1rem;
-            cursor: pointer;
-            border-radius: 50%;
-        }
-        .carousel-controls button:hover {
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-    </style>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
@@ -137,8 +24,8 @@
         <section class="links-section">
             <h2>Enlaces</h2>
             <a href="asistente-gimnasio.html">Asistente de Gimnasio</a>
-            <a href="conocimiento.html">Conocimiento</a>
             <a href="base-conocimiento.html">Base de Conocimiento</a>
+            <a href="recursos.html">recuros técnicos utilizados</a>
         </section>
         <section class="carousel">
             <img src="assets/imagen1.png" alt="Imagen 1" class="active">
