--- a/recursos.html
+++ b/recursos.html
@@ -22,13 +22,13 @@
                 <li>
                     <span class="toggle">Documentación</span>
                     <ul>
-                        <li><a href="docs/bienvenida.html" target="content-frame">Bienvenida</a></li>
+                        <li><a href="recursos.html/recursosTecnicos.html" target="content-frame">Bienvenida</a></li>
                         <li><a href="ia-aplicaciones.html" target="content-frame">Aplicaciones de la IA</a></li>
                         <li><a href="ia-etica.html" target="content-frame">Ética en la IA</a></li>
                     </ul>
                 </li>
                 <li>
-                    <span class="toggle">Desarrollo Web</span>
+                    <span class="toggle">GitHub</span>
                     <ul>
                         <li><a href="html-basico.html" target="content-frame">HTML Básico</a></li>
                         <li><a href="css-avanzado.html" target="content-frame">CSS Avanzado</a></li>
