--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <h2>Enlaces</h2>
             <a href="asistente-gimnasio.html">Asistente de Gimnasio</a>
             <a href="base-conocimiento.html">Base de Conocimiento</a>
-            <a href="recursos.html">recuros técnicos utilizados</a>
+            <a href="recursos.html">Recursos técnicos utilizados</a>
+            <a href="editor.html">Editor de Archivos</a>
         </section>
         <section class="carousel">
             <img src="assets/imagen1.png" alt="Imagen 1" class="active">
