--- a/pages/asistente-gimnasio.html
+++ b/pages/asistente-gimnasio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página del asistente de gimnasio con integración de chatbot.">
     <title>Asistente Gimnasio - Mydz</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="../style/estilos.css">
 </head>
 <body>
     <header>
