--- a/pages/base-conocimiento.html
+++ b/pages/base-conocimiento.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Base de conocimiento con navegación y contenido dinámico.">
     <title>Base de Conocimiento - Mydz</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="../style/estilos.css">
 </head>
 <body>
     <header>
